test/arrays/johnk/associative/badValType.good
badValType.chpl:2: error: Associative array value element 1 expected to be of type int(64) but is of type string
