test/arrays/johnk/associative/badValType.chpl
var D : domain(string);
var arr : [D] int = ["foo"=>2, "bar"=>"oops"];
